# Stellaris-Exe-Checksum-Patcher

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build-run.bat  build-run.sh  docker-compose.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
Stellaris Checksum Patcher/: BEFORE_COMPILE_CHECKLIST.txt  main.py  requirements.txt  toggle-taskbar-settings.json
Stellaris Checksum Patcher/UI/: StellarisChecksumPatcherUI.py  StellarisChecksumPatcherUI.ui  __init__.py  stellaris_checksum_patcher_gui.py  ui_utils.py  worker_threads.py
Stellaris Checksum Patcher/cli_menu/: CLI.py
Stellaris Checksum Patcher/hex_data/: HexData.py  __init__.py
Stellaris Checksum Patcher/hex_patchers/: HexData.py  HexPatcher.py  __init__.py  registry_helper.py  steam_helper.py
Stellaris Checksum Patcher/logger/: Logger.py  __init__.py  colours.py
Stellaris Checksum Patcher/stellaris_patcher_menu/: __init__.py  entry_menu.py
StellarisChecksumPatcher/: main.py  requirements.txt
StellarisChecksumPatcher/UI/: StellarisChecksumPatcherUI.py  StellarisChecksumPatcherUI.ui  __init__.py  stellaris_checksum_patcher_gui.py  ui_auto_builder.py  ui_utils.py
StellarisChecksumPatcher/_icon/: stellaris_checksum_patcher_ui_icons.psd
StellarisChecksumPatcher/achievements/: achievements.txt
StellarisChecksumPatcher/hex_patchers/: HexPatcher.py  __init__.py  registry_helper.py  steam_helper.py
StellarisChecksumPatcher/logger/: Logger.py  __init__.py
StellarisChecksumPatcher/patchers/: HexPatcher.py  save_patcher.py  (+1 more)
_build_config/: stellaris-checksum-patcher-build-config-linux.json  stellaris-checksum-patcher-build-config-win.json
_icon/: stellaris_checksum_patcher_icon.psd  stellaris_checksum_patcher_ui_icons.psd
auto-py-to-exe-builds/: build-linux.json  build-win.json
builds/: build-docker-nuitka-linux.py  build-docker-ubuntu  build-docker-ubuntu-entrypoint.sh  build-nuitka.py  build-pyinstaller.py
docs/: update-patch-patterns.md
nuitka-builds/: build.py
scripts/: dev-run.bat  dev-run.sh
src/: app_services.py  cli.py  conf_globals.py  main.py  thread_utils.py
(+72 files in other folders)
