[project]
name = "Stellaris-Exe-Checksum-Patcher"
version = "2025.0.0"
description = "Patches the Stellaris binary so that playing Ironman mode with mods allows the collection of achievements."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.13"
keywords = [
  "stellaris",
  "checksum",
  "patcher",
  "ironman",
  "mods",
  "save",
  "fix",
]
dependencies = [
  "PySide6==6.9.2",
  "requests~=2.32.5",
  "vdf==3.4",
  "chardet==5.2.0",
]
authors = [{ name = "Artur Rosário" }]
maintainers = [{ name = "Artur Rosário" }]

[project.urls]
Repository = "https://github.com/r0fld4nc3/Stellaris-Exe-Checksum-Patcher.git"
