[project]
name = "Stellaris-Exe-Checksum-Patcher"
version = "2.1.1"
description = "Patches the Stellaris binary so that playing Ironman mode with mods allows the collection of achievements."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Artur Rosario" }]
maintainers = [{ name = "Artur Rosario" }]
keywords = [
  "stellaris",
  "checksum",
  "patcher",
  "ironman",
  "mods",
  "save",
  "fix",
]
requires-python = ">= 3.13, <3.14" # 3.14 does not yet support PySide6

dependencies = [
  "PySide6-Essentials~=6.10.1",
  "requests~=2.32.5",
  "vdf~=3.4",
  "chardet~=5.2.0",
  "urllib3~=2.6.3",
]

[project.urls]
Repository = "https://github.com/r0fld4nc3/Stellaris-Exe-Checksum-Patcher.git"

[dependency-groups]
dev = ["nuitka~=2.8.9"]
